# sqlite2pgrest

./: .gitignore  Cargo.nix  Cargo.toml  README.md  cliff.toml  flake.nix  renovate.json
.github/workflows/: pull_request.yml  push_main.yml
src/: main.rs
